# curl_cffi

./: .gitignore  .readthedocs.yaml  AGENTS.md  FUNDING.yml  Justfile  LICENSE  MANIFEST.in  Makefile  README-zh.md  README.md  SKILL.md  __init__.py  _const.py  build.py  build.sh  bump_version.sh  cdef.c  cffi_build.py  ci-win32.toml  curl_constants.py  dev-requirements.txt  example.py  gen_const.sh  generate_curl_constants.sh  libs.json  mkdocs.yml  prebuild.py  prebuild.sh  pyproject.toml  readme.md  setup.py  test_curl.py  test_fix.py  test_simple.py
.githooks/: pre-commit
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  fingerprint_report.md  question.md
.github/workflows/: build-and-test.yaml  build.yaml  pr-checklist.yaml  release.yaml  test-pro.yaml  test.yaml
Formula/: curl-cffi.rb
benchmark/: README.md  benchmark.py  hardware.txt  multiple_workers.csv  requirements.txt  server.py  single_worker.csv  ws_bench_1_client.py  ws_bench_1_client_sync.py  ws_bench_1_server.py  ws_bench_2.py  ws_bench_2_sync.py  ws_bench_utils.py
curl_cffi/: __init__.py  __main__.py  __version__.py  _asyncio_selector.py  _const.py  _curl_cffi.c  aio.py  async_base.py  build.py  cdef.c  cli.py  const.py  cookies.py  curl.py  fingerprints.py  headers.py  pro.py  requests.py  shim.c  trio.py  utils.py
curl_cffi/cli/: __init__.py  doctor.py  output.py  parse.py  pro.py  request.py  run.py
curl_cffi/ffi/: cdef.c
curl_cffi/include/: shim.h
curl_cffi/include/curl/: curl.h
curl_cffi/requests/: __init__.py  cache.py  cipher.py  cookies.py  errors.py  exceptions.py  files.py  headers.py  impersonate.py  models.py  options.py  session.py  streams.py  trio_session.py  types.py  utils.py  websockets.py
docs/: Makefile  advanced.rst  api.md  api.rst  asyncio.rst  changelog.md  changelog.rst  cli.rst  community.rst  compile.md  compile.rst  conf.py  cookies.md  cookies.rst  dev.rst  exceptions.rst  faq.md  faq.rst  fingerprints.rst  impersonate.rst  index.md  index.rst  install.rst  pro.rst  quick_start.rst  requirements.txt  security.rst  usage.md  vs-requests.md  vs-requests.rst  websockets.rst  zh.md
docs/api/: curl_cffi.md  curl_cffi.requests.md
docs/cli/: _index.rst  doctor.rst  options.rst  pro.rst  request_params.rst  run.rst  vs_others.rst
docs/css/: mkdocstrings.css
docs/impersonate/: _index.rst  customize.rst  faq.rst  fingerprint.rst  ja4.rst  psk.rst  targets.rst
examples/: async_session.py  curl_like.py  custom_response_class.py  impersonate.py  keyboard_interrupt.py  requests_like.py  stream.py  upload.py  websocket.py  websocket_server.py
examples/websockets/: long_running.py  long_running_async.py  long_running_sync.py  short_running.py  simple_echo_async.py  simple_echo_sync.py  simple_hft_async.py  simple_hft_sync.py  simple_sub_async.py  simple_sub_sync.py
ffi/: cdef.c  shim.c  shim.h
include/: index.c  index.cpp  index.h
preprocess/: download_so.py  generate_consts.py  prebuild.py
pycurl_patch/: __init__.py
scripts/: build.py  bump_version.sh  check_browsers.py  check_preset.py  download_curl.sh  generate_consts.py  homebrew.py
skills/imp-fetch/: SKILL.md
tests/: test_outside.py  test_real_world.py  test_setopt.py
tests/integration/: test_fingerprints.py  test_httpbin.py  test_real_world.py  test_response_class.py  test_tcp_fp_wire.py
tests/pro/: conftest.py  test_fp_verify.py  test_pro.py
tests/threads/: test_eventlet.py  test_gevent.py
tests/unittest/: conftest.py  test_async.py  test_async_session.py  test_async_websockets.py  test_build.py  test_cache.py  test_cli.py  test_cookies.py  test_curl.py  test_fingerprint_application.py  test_fingerprints.py  test_headers.py  test_impersonate.py  test_models.py  test_prepared_request.py  test_profile_impersonate.py  test_requests.py  test_setopt.py  test_share.py  test_smoke.py  test_sync_websockets.py  test_tcp_fp_wire.py  test_trio_session.py  test_unicode_cert_path.py  test_upload.py  test_version.py  test_websockets.py
tests/unittest/cli/: test_doctor.py  test_output.py  test_parse.py  test_pro.py  test_pro_command.py  test_request.py  test_run.py
