[project]
name = "curl_cffi"
version = "0.15.0b4"
authors = [{ name = "lexiforest", email = "infinitesheldon@gmail.com" }]
description = "libcurl ffi bindings for Python, with impersonation support."
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "cffi>=2.0.0",
    "certifi>=2024.2.2",
]
readme = "README.md"
requires-python = ">=3.10"
urls = { "repository" = "https://github.com/lexiforest/curl_cffi" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
]


[project.optional-dependencies]
extra = [
    "readability-lxml>=0.8.1",
    "markdownify>=1.1.0",
    "lxml_html_clean",
]
dev = [
    "charset_normalizer>=3.3.2,<4.0",
    "coverage>=6.4.1,<7.0",
    "cryptography>=46.0.4,<47.0",
    "httpx==0.23.1",  # don't change, tests will raise "httpx.InvalidURL: Invalid URL component 'path'"
    "mypy>=1.9.0,<2.0",
    "pytest>=8.1.1,<9.0",
    "pytest-asyncio>=0.23.6,<1.0",
    "pytest-trio>=0.8.0,<1.0",
    "ruff>=0.3.5,<1.0",
    "trio>=0.25.0,<1.0",
    "trustme>=1.1.0,<2.0",
    "uvicorn>=0.29.0,<1.0",
    "websockets>=14.0",
    "typing_extensions",
]
build = [
    "cibuildwheel",
    "wheel",
]
test = [
    "charset_normalizer>=3.3.2,<4.0",
    "cryptography>=46.0.4,<47.0",
    "litestar>=2.19.0,<3.0",
    "httpx==0.23.1",  # don't change, tests will raise "httpx.InvalidURL: Invalid URL component 'path'"
    "proxy.py>=2.4.3,<3.0",
    "pytest>=8.1.1,<9.0",
    "pytest-asyncio>=0.23.6,<1.0",
    "pytest-trio>=0.8.0,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "trio>=0.25.0,<1.0",
    "trustme>=1.1.0,<2.0",
    "uvicorn>=0.29.0,<1.0",
    "websockets>=14.0",
    "typing_extensions",
]

[project.scripts]
curl-cffi = "curl_cffi.cli:main"

[build-system]
requires = ["wheel", "setuptools", "cffi>=2.0.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["curl_cffi", "curl_cffi.requests"]
package-data = { curl_cffi = ["libcurl.dll"] }


[tool.cibuildwheel]
# Building for these platforms is enough since we are using abi3 packages
build = [
    "cp310-macosx_x86_64",
    "cp310-macosx_arm64",
    "cp310-win_amd64",
    "cp310-win_arm64",
    "cp310-manylinux_x86_64",
    "cp310-manylinux_aarch64",
    "cp310-manylinux_riscv64",
    "cp310-manylinux_i686",
    "cp310-manylinux_armv7l",
    "cp310-musllinux_x86_64",
    "cp310-musllinux_aarch64",
    # Free-threaded (PEP 703) wheels
    "cp314t-macosx_x86_64",
    "cp314t-macosx_arm64",
    "cp314t-win_amd64",
    "cp314t-win_arm64",
    "cp314t-manylinux_x86_64",
    "cp314t-manylinux_aarch64",
    "cp314t-musllinux_x86_64",
    "cp314t-musllinux_aarch64",
]
before-all = "make preprocess"
test-requires = "pytest"
test-command = "python -bb -m pytest {project}/tests/unittest"
test-extras = ["test"]
# trustme not available for these images
test-skip = [
    "cp310-manylinux_i686",
    "cp310-win_arm64",
    "cp314t-win_arm64",
    "cp310-manylinux_armv7l",
    "cp310-manylinux_riscv64",
]
build-verbosity = 1


# configure cibuildwheel to build native archs ('auto'), and some emulated ones
[tool.cibuildwheel.linux]
archs = ["auto", "aarch64", "riscv64", "i686", "armv7l"]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
environment = { LD_LIBRARY_PATH="$HOME/.local/lib" }
environment-pass = ["LD_LIBRARY_PATH"]

[tool.cibuildwheel.android]
archs = ["arm64_v8a", "x86_64"]


[tool.cibuildwheel.macos]
before-all = "gmake preprocess"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair --add-path ./lib64;./lib32;./libarm64 -w {dest_dir} {wheel}"


[tool.pytest.ini_options]
# pythonpath = [ "." ]
asyncio_mode = "auto"


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "UP007",
    "UP045",  # X | None
]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
#warn_unused_ignores = true
#strict = true
exclude = ["benchmark/", "docs/", "examples/", "scripts/", "tests/", "build/"]
